--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@
 # Get API key from: https://app.hyperliquid.xyz/API
 # IMPORTANT: Use a separate API wallet, not your main wallet private key!
 HL_ACCOUNT_ADDRESS=0x_your_wallet_address
-HL_API_WALLET_KEY=0x_your_api_wallet_private_key
+HL_SECRET_KEY=0x_your_api_wallet_private_key
 HL_TESTNET=true
+
+# Optional: Grok API key for sentiment, unlocks, devcheck commands
+# XAI_API_KEY=xai-...
