--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ HL_ACCOUNT_ADDRESS=0x_your_wallet_address
 HL_SECRET_KEY=0x_your_api_wallet_private_key
 HL_TESTNET=true
 
-# Optional: Caching proxy URL (run scripts/server.py first)
-# HL_PROXY_URL=http://localhost:18731
+# Caching proxy (start scripts/server.py first, strongly recommended to avoid rate limits)
+HL_PROXY_URL=http://localhost:18731
 
 # Optional: Grok API key for sentiment, unlocks, devcheck commands
 # XAI_API_KEY=xai-...
